--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         a.async=1;a.src=e+'?id='+S.appId;
         p=l.getElementsByTagName('script')[0];
         p.parentNode.insertBefore(a, p);
-    })(document, 'https://cdn.sprig.com/shim.js', 'ENVIRONMENT_ID');
+    })(document, 'https://cdn.sprig.com/shim.js', 'wNCnFzlYP6nr');
     </script>
 </head>
 <body>
